# triglav

./: .gitignore  Cargo.toml  README.md
apps/macos/: Package.swift  README.md
apps/macos/Packaging/: Info.plist
apps/macos/Sources/TriglavGUI/: AppDelegate.swift  AppModel.swift  AppSceneState.swift  ClientStatus.swift  LaunchdTunService.swift  MenuBarState.swift  PrivilegedHelperManager.swift  PrivilegedHelperProtocol.swift  TriglavMacApp.swift  Views.swift
apps/macos/Triglav.xcodeproj/: project.pbxproj
apps/macos/Triglav.xcodeproj/xcshareddata/xcschemes/: Triglav.xcscheme
apps/macos/Triglav.xcodeproj/xcuserdata/int.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/macos/Xcode/App/: Info.plist
apps/macos/Xcode/Helper/: Info.plist  PrivilegedHelperTool.swift  com.triglav.gui.helper.plist
apps/macos/Xcode/Resources/Assets.xcassets/: Contents.json
apps/macos/Xcode/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/macos/scripts/: build-xcode-app.sh  notarize-app.sh  package-app.sh  sign-app.sh
docker/testnet/: Dockerfile.chaos  Dockerfile.client  Dockerfile.router  Dockerfile.server  Dockerfile.test  docker-compose.yml  prometheus.yml
docker/testnet/grafana/dashboards/: dashboards.yml  triglav.json
docker/testnet/scripts/: chaos-agent.sh  run-tests.sh  setup-impairment.sh  start-client.sh  start-server.sh
physical_tests/: README.md  e2e_validation.sh  network_impairment.sh  run_physical_tests.sh
simulation/: Cargo.toml  optimal_parameters.toml  simulation_results.csv  simulation_results.json
simulation/src/: algorithms.rs  analysis.rs  main.rs  network.rs  physical.rs  report.rs  scenarios.rs  simulation.rs
simulation/src/neural/: lstm.rs  mod.rs  tcn.rs  transformer.rs
src/: error.rs  lib.rs  main.rs  types.rs
src/cli/: mod.rs
src/config/: mod.rs
src/crypto/: kdf.rs  keys.rs  mod.rs  noise.rs  symmetric.rs
src/metrics/: client_status.rs  http_server.rs  mod.rs  predictor.rs  prometheus_export.rs  quality.rs
src/multipath/: aggregator.rs  flow_hash.rs  manager.rs  mod.rs  nat.rs  path_discovery.rs  scheduler.rs  throughput.rs  uplink.rs
src/protocol/: codec.rs  message.rs  mod.rs  packet.rs
src/proxy/: http.rs  mod.rs  socks5.rs
src/server/: daemon.rs  mod.rs  sessions.rs  signals.rs  users.rs
src/transport/: buffer.rs  mod.rs  socket.rs  tcp.rs  udp.rs
src/tun/: device.rs  dns.rs  mod.rs  nat.rs  packet.rs  routing.rs  runner.rs
src/util/: connectivity.rs  interface.rs  mod.rs  netwatch.rs
tests/: aggregation_impairment.rs  boundary_edge_cases.rs  e2e_multipath.rs  error_recovery.rs  integration.rs  network_impairment_simulation.rs  physical_multipath.rs  scheduler_strategies.rs  security_edge_cases.rs  stress_tests.rs  tcp_transport.rs  tun_test.rs
